deploy/template.redis.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: forgestatus-redis
  namespace: ${ENV}
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: forgestatus-redis
    spec:
      containers:
      - name: forgestatus-redis
        image: redis:5.0-alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 6379
        livenessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 20
          periodSeconds: 10
