deploy/template.worker.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: forgestatus-worker-${WORKER_ID}
  namespace: ${ENV}
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: forgestatus-worker
        workerId: "${WORKER_ID}"
    spec:
      containers:
      - name: forgestatus-worker-${WORKER_ID}
        image: gcr.io/forgestatus/forgestatus-worker:${CIRCLE_SHA1}
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "0.3Gi"
            cpu: 0.15
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 10
