deploy/template.redis.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgestatus-redis-service
  namespace: ${ENV}
spec:
  type: ClusterIP
  selector:
    app: forgestatus-redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
