deploy/template.server.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgestatus-server-service
  namespace: ${ENV}
spec:
  type: NodePort
  selector:
    app: forgestatus-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
