deploy/template.worker.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgestatus-worker-${WORKER_ID}-service-${ENV}
spec:
  type: ClusterIP
  selector:
    app: forgestatus-worker-${WORKER_ID}-${ENV}
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
